# fastapi_crudbuilder

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
crudbuilder/: __init__.py  builder.py  transform.py
fastapi_crudbuilder/: builder.py  transform.py
src/: builder.py  config.py  generators.py
tests/: test_crudbuilder.py
