[tool.poetry]
name = "crudbuilder"
version = "0.1.0"
description = "CRUDBuilder is a library that helps you to create CRUD endpoints for your FastAPI/ SqlAlchemy database models."
authors = ["Leonard Mazzone <lenny@tetricuslabs.com>", "Rich Winslow <rich@tetricuslabs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
