[project]
requires-python = ">=3.11"


[tool.poetry]
name = "CRUDBuilder"
version = "0.1.0"
description = "CRUDBuilder is a library that helps you to create CRUD endpoints for your FastAPI/ SqlAlchemy database models."
authors = ["Leonard Mazzone <lenny@tetricuslabs.com>", "Rich Winslow <rich@tetricuslabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.ruff]
line-length = 88

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
rust = "^1.3.1"

[tool.poetry.group.testing.dependencies]
pytest = "^8.2.1"

[tool.pytest.ini_options]
testpaths = ["./tests/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
